modify javascript/css paths

--- a/app/views/nicospace/a2750b30ffbc7de3b362.haml
+++ b/app/views/nicospace/a2750b30ffbc7de3b362.haml
@@ -2,10 +2,10 @@
   %head
     %title
       ニコニコ動画宇宙コミュ用コンバータ
-    %link{ :type => 'text/css', :href => 'stylesheets/smoothness/jquery-ui-1.8.custom.css', :rel => 'stylesheet' }
-    %script{ :type => 'text/javascript', :src => 'javascripts/jquery-1.4.2.min.js' }
-    %script{ :type => 'text/javascript', :src => 'javascripts/jquery-ui-1.8.custom.min.js' }
-    %script{ :type => 'text/javascript', :src => 'javascripts/jquery.layout.min-1.2.0.js' }
+    %link{ :type => 'text/css', :href => 'css/smoothness/jquery-ui-1.8.19.custom.css', :rel => 'stylesheet' }
+    %script{ :type => 'text/javascript', :src => 'http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js' }
+    %script{ :type => 'text/javascript', :src => 'https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js' }
+    %script{ :type => 'text/javascript', :src => 'js/jquery.layout.min-1.2.0.js' }
     %style
       :sass
         div.ui-layout-west
